--- a/puntoA/Makefile
+++ b/puntoA/Makefile
@@ -1,12 +1,12 @@
-all: plot.png
+all: plot.pdf
 
 %.x: %.o
 	g++ $^ -o $@
 
-data.txt: punto1.x
-	./punto1.x
+wind.dat: puntoA.x
+	./puntoA.x
 
-plot.png: WindChannel.dat plot.gp
+plot.pdf: wind.dat plot.gp
 	gnuplot plot.gp
 	open plot.png
 clean:
